Feature (hot fixes before)
- updated verification of user after signup
- inviting users
